--- a/src/modules/components/Modal/Modal.module.css
+++ b/src/modules/components/Modal/Modal.module.css
@@ -1,22 +1,33 @@
 .modal {
   position: absolute;
-  padding: 20px;
+  min-width: 320px;
+  max-width: 720px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  height: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 20px;
-  border: 2px solid black;
+  border-radius: 5px;
   background-color: lightgray;
   z-index: 2;
 }
 
 .close {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 20px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 
-  background-color: beige;
+  background-color: rgb(175, 175, 175);
   color: black;
   padding: 2px;
-  border-radius: 0;
+  font-weight: 600;
+  z-index: 3;
+}
+
+.close:hover {
+  transform: scale(1.1);
 }
